--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "dev": "node_modules/.bin/live-server",
     "start": "npm-run-all --parallel dev watch:sass",
+
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass prefix:css compress:css"
+    "build:css": "npm-run-all compile:sass prefix:css compress:css",
+
+    "clean": "rimraf dist && mkdir dist",
+    "copy": "cp -r index.html css favicons images js pdf videos dist",
+    "build": "npm-run-all build:css clean copy",
+    "prod": "scp -r ./dist root@138.197.41.225:/www/data",
+    "deploy": "npm-run-all build prod"
   },
   "keywords": [
     "Portfolio",
@@ -28,6 +35,7 @@
     "live-server": "^1.2.0",
     "node-sass": "^4.7.2",
     "npm-run-all": "^4.1.2",
-    "postcss-cli": "^4.1.1"
+    "postcss-cli": "^4.1.1",
+    "rimraf": "^2.6.2"
   }
 }
